--- a/style.css
+++ b/style.css
@@ -2,5 +2,32 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 h1{
-    font-size: 50px;
+    font-size: 40px;
+}
+.upper-part{
+    display: flex;
+}
+.orange-color{
+    color: orange;
+}
+.half-width{
+    width: 50%;
+    padding-left: 20px;
+}
+.half-width img{
+    width: 75%;
+}
+.link-button{
+    color: white;
+    text-decoration: none;
+    background-image: linear-gradient(blue,lightblue);
+    padding: 10px 40px;
+    border-radius: 5px;
+    font-weight: 700;
+
+    
+}
+p{
+    text-align: justify;
+    margin-bottom: 40px;
 }
