--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 40px;
 }
 .upper-part{
     display: flex;
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
 .orange-color{
     color: orange;
@@ -30,4 +33,11 @@ h1{
 p{
     text-align: justify;
     margin-bottom: 40px;
+}
+.dream-big{
+    display: flex;
+    margin-top: 100px;
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
