--- a/style.css
+++ b/style.css
@@ -40,4 +40,37 @@ p{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+    margin-bottom: 50px;
+}
+.box{
+    display: flex;
+
+}
+.experience-item{
+    width: 80%;
+    margin: 0 5%;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.experience{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    margin-bottom: 100px;
+}
+footer p{
+    text-align: center;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon,purple);
+    border-image-slice: 1;
+}
+#junior{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,skyblue);
+    border-image-slice: 1;
+
 }
